--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-pandas
+pandas==1.2.4
+streamlit==0.85.1
+numpy==1.20.3
+yfinance==0.1.63
 plotly
 psycopg2
 yahoofinancials
-yfinance
 pyportfolioopt  
 openpyxl
 cvxpy
 cvxopt
+pip
